# objpipe

./: .travis.yml  CMakeLists.txt  README.md  objpipe-config-version.cmake.in  objpipe-config.cmake
doxygen/: MakingASource.dox  MakingIocPush.dox  namespaces.dox
doxygen/concepts/: IocAcceptor.dox  IocPushConcept.dox  Source.dox  Transformation.dox
include/objpipe/: array.h  callback.h  doc_.h  errc.h  interlock.h  merge.h  of.h  push_policies.h  reader.h
include/objpipe/detail/: adapt.h  adapter.h  array_pipe.h  callback_pipe.h  deref_op.h  empty_pipe.h  filter_op.h  flatten_op.h  fwd.h  interlock_pipe.h  invocable_.h  merge_pipe.h  of_pipe.h  peek_op.h  push_op.h  select_op.h  task.h  thread_pool.h  transform_op.h  transport.h  virtual.h
test/: CMakeLists.txt  objpipe.cc  test_hacks.ii
